# zgencoin

./: Cargo.toml
zgc-blockchain/: Cargo.toml
zgc-blockchain/src/: block.rs  lib.rs  transaction.rs  wallet.rs
zgc-common/: Cargo.toml
zgc-common/examples/: hash_serde.rs  hash_test.json
zgc-common/src/: lib.rs  types.rs
zgc-crypto/: Cargo.toml
zgc-crypto/examples/: array_chunks.rs
zgc-crypto/src/: consts.rs  lib.rs  sha256.rs
zgc-nodes/: Cargo.toml
zgc-nodes/examples/: multithreading.rs  nodes.rs
zgc-nodes/src/: concurrency.rs  lib.rs  miner.rs  multithreading.rs  node.rs  thin_node.rs  thread_pool.rs  tx_pool.rs
zgencoin-cryptography/: Cargo.toml
zgencoin-cryptography/src/: lib.rs
