[package]
name = "zgc-nodes"
version = "0.1.0"
authors = ["Mark Melczer <melczer7@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.51"
rand = "0.8.4"
serde_json = "1.0"
tokio = { version = "1.9", features = ["full"] }

zgc-blockchain = { path = "../zgc-blockchain" }
zgc-crypto = { path = "../zgc-crypto" }

