[package]
name = "zgc-nodes"
version = "0.1.0"
authors = ["Mark Melczer <melczer7@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.51"
futures = "0.3.16"
rand = "0.8.4"
serde_json = "1.0"
tokio = { version = "1.9", features = ["full"] }
tokio-serde = { version = "0.8", features = ["json"] }
tokio-util = { version = "0.6.7", features = ["codec"] }

zgc-blockchain = { path = "../zgc-blockchain" }
zgc-crypto = { path = "../zgc-crypto" }

