[package]
name = "zgc-nodes"
version = "0.1.0"
authors = ["Mark Melczer <melczer7@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.8.4"
serde = "1.0"
serde_json = "1.0"

zgc-blockchain = { path = "../zgc-blockchain" }
zgc-common = { path = "../zgc-common" }
zgc-crypto = { path = "../zgc-crypto" }
